# balancer-main

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTH.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.prod  Makefile  README.md  babel.config.js  deployment.sh  devbox.json  docker-compose.ai.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.prodBackup.yml  docker-compose.yml  index.html  jest.config.js  jest.setup.js  package-lock.json  package.json  pull_request_template.md  pyproject.toml  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_BODY_fix-deploy-api-and-ci.md
.holo/: config.toml
ai/: Dockerfile  entrypoint.sh  manage.py  requirements.txt
backend/: Dockerfile  Makefile  README.md  dev-dockerfile  manage.py  pyproject.toml  requirements.txt
backend/backend/backend/: settings.py
backend/balancer/: settings.py  urls.py  wsgi.py
backend/balancer/controllers/: chatgpt.py  jira.py  listDrugs.py  risk.py
backend/balancer/users/: admin.py  apps.py  managers.py  models.py  serializers.py
backend/balancer/users/migrations/: 0001_initial.py
backend/config/docker/compose/: docker-compose.local.yaml
backend/config/docker/examples/: sample.env
backend/config/docker/scripts/: run-server-entrypoint.sh
backend/config/scripts/mac/: install_all_p1.sh  install_all_p2.sh  install_all_p3.sh  install_brew.sh  install_utils.sh
backend/config/settings/: base.py  local.py
backend/docs/: BACKEND_DOCKER_METHODS.md  LINUX_INSTALLATION.md  MAC_OS_INSTALLATION.md
backend/functional_tests/: test_account_creation.py
balancer/: asgi.py  settings.py  urls.py
config/: settings.py
db/: Dockerfile
deploy/: kind-config.yaml  kind-test.sh
docs/: DATABASE_CONNECTION.md  DEPLOY_RESOLUTION_STEPS.md  MIGRATION_PDF_AUTH.md
evaluation/: README.md  evals.py  test_evals.py
frontend/: .env  .env.production  .gitignore  API_ENDPOINTS_REFACTORING.md  Dockerfile  Dockerfile.demo  Dockerfile.dev  Dockerfile.nginx  Dockerfile.prod  docker-compose.demo.yaml  docker-compose.dev.yaml  index.html  ingress-example.yaml  nginx-docker-compose.yml  nginx.conf  nginx.conf.demo  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.jest.json  tsconfig.json  tsconfig.node.json  vite.config.ts
helm-chart/: Chart.yaml  README.md  Values.yaml  values.yaml
k8s/: Chart.yaml  values.yaml
server/: .dockerignore  Dockerfile  env  (+14 more)
(+395 files in other folders)
