[tool.poetry]
name = "balancer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.2"
beautifulsoup4 = "^4.12.2"
openai = "^0.27.8"
requests = "^2.31.0"
tiktoken = "^0.4.0"
nltk = "^3.8.1"
python-dotenv = "^1.0.0"
pinecone-client = "^2.2.2"
torch = "^2.0.1"
sentence-transformers = "2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
