[tool.poetry]
name = "balancer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.2"
beautifulsoup4 = "^4.12.2"
openai = "^0.27.8"
requests = "^2.31.0"
tiktoken = "^0.4.0"
nltk = "^3.8.1"
python-dotenv = "^1.0.0"
pytest-playwright = "^0.3.3"
pytest-django = "^4.5.2"
django-extensions = "^3.2.3"
djoser = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-django = "^4.5.2"
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
